# llm_sign

./: ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.md  ARCHITECTURE_SUMMARY.md  CODE_ANALYSIS_DETAILED.md  CODE_SNIPPETS_ACTUAL.md  COMPREHENSIVE_ANALYSIS.md  QUICK_REFERENCE.md  QUICK_REFERENCE_VISUAL.txt  README.md  SECURITY.md  pyproject.toml
benchmark/: README.md
benchmark/certs/ecdsa/: cert.pem  key.pem
benchmark/certs/ed25519/: cert.pem  key.pem
benchmark/certs/rsa/: cert.pem  key.pem
benchmark/results/: sign_bench.txt  sign_bench_xl.txt  suite_bench.txt
benchmark/scripts/: sign_bench.py  sign_bench_xl.py  suite_bench.py
docs/: artifact.md
example/: README.md  _signed_openai_fixture.py  offline_openai_chat_verify.py  openai_client_verify.py  tamper_detection.py
spec/: README.md  issuer-pki.md  normalization.md  provider-certificate-binding.md
src/llm_sign/: __init__.py  _b64.py  blocks.py  cli.py  encoding.py  errors.py  openai.py  pki.py  tls_verify.py  verifier.py
src/llm_sign/client/: __init__.py
src/llm_sign/core/: __init__.py  base64.py  blocks.py  crypto.py  encoding.py  errors.py  profiles.py
src/llm_sign/keys/: __init__.py  ed25519.py  tls.py  x509.py
src/llm_sign/profiles/: __init__.py  canonical_json.py  openai_chat.py  openai_responses.py
src/llm_sign/server/: __init__.py
tests/: test_audit_findings.py  test_e2e_signed_client_flow.py  test_integration_helpers.py  test_openai_profile.py  test_openai_responses.py  test_pki.py  test_platform_artifact.py  test_public_api.py  test_sign_verify.py  test_vendor_tls.py  test_version_compatibility.py
tests/e2e_support/: __init__.py  client.py  constants.py  payloads.py  proxy.py  server.py
