[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-sign"
version = "0.1.0"
description = "Provider and client helpers for signed LLM transcript verification"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "cryptography>=42",
]

[project.optional-dependencies]
openai = [
  "openai>=1",
]

[project.scripts]
llm-sign-verify = "llm_sign.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
